Comments and notifications modules are built